@@ -182,7 +182,7 @@ Table of Contents
 	$ export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:${AXIS2C_HOME}/lib/
     $ cd samples
     $ ./configure --prefix=${AXIS2C_HOME} 
-				  --with-axis2=${AXIS2C_HOME}/include/axis2-1.4.0
+				  --with-axis2=${AXIS2C_HOME}/include/axis2-1.5.0
     $ make
     $ make install
 
