@@ -14,7 +14,7 @@
 # limitations under the License.
 # -------------------------------------------------------------------
 
-axis2_version=1.4.0
+axis2_version=1.5.0
 maven.xdoc.date=left
 maven.xdoc.version=${pom.currentVersion}
 maven.xdoc.includeProjectDocumentation=no
