@@ -23,6 +23,31 @@
             <td width="69" align="center">Date</td>
             <td width="119" align="center">Description</td>
           </tr>
+<!--##############################1.5.0 Release#############################-->
+          <tr class="b">
+            <td align="center" valign="middle">1.5.0</td>
+            <td align="center">Release</td>
+            <td>MS Windows Distribution<br></br> - Binary Distribution <a href="[preferred]/ws/axis2/c/1_5_0/axis2c-bin-1.5.0-win32.zip" title="[preferred]/ws/axis2/1_5_0/axis2c-bin-1.5.0-win32.zip" onclick="javascript:urchinTracker (&apos;/downloads/axis2c-bin-1.5.0-win32.zip&apos;);">zip</a>
+        <a href="http://www.apache.org/dist/ws/axis2/c/1_5_0/axis2c-bin-1.5.0-win32.zip.md5" class="externalLink" title="http://www.apache.org/dist/ws/axis2/c/1_5_0/axis2c-bin-1.5.0-win32.zip.md5">MD5</a>
+        <a href="http://www.apache.org/dist/ws/axis2/c/1_5_0/axis2c-bin-1.5.0-win32.zip.asc" class="externalLink" title="http://www.apache.org/dist/ws/axis2/c/1_5_0/axis2c-bin-1.5.0-win32.zip.asc">PGP</a>
+        <br></br>
+        - Source Distribution <a href="[preferred]/ws/axis2/c/1_5_0/axis2c-src-1.5.0.zip" title="[preferred]/ws/axis2/c/1_5_0/axis2c-src-1.5.0.zip" onclick="javascript:urchinTracker (&apos;/downloads/axis2c-src-1.5.0.zip&apos;);">zip</a>
+        <a href="http://www.apache.org/dist/ws/axis2/c/1_5_0/axis2c-src-1.5.0.zip.md5" class="externalLink" title="http://www.apache.org/dist/ws/axis2/c/1_5_0/axis2c-src-1.5.0.zip.md5">MD5</a>
+        <a href="http://www.apache.org/dist/ws/axis2/c/1_5_0/axis2c-src-1.5.0.zip.asc" class="externalLink" title="http://www.apache.org/dist/ws/axis2/c/1_5_0/axis2c-src-1.5.0.zip.asc">PGP</a>
+        <br></br>
+        Linux Distribution <br></br>
+        - Binary Distribution <a href="[preferred]/ws/axis2/c/1_5_0/axis2c-bin-1.5.0-linux.tar.gz" title="[preferred]/ws/axis2/c/1_5_0/axis2c-bin-1.5.0-linux.tar.gz" onclick="javascript:urchinTracker (&apos;/downloads/axis2c-bin-1.5.0-linux.tar.gz&apos;);">tar.gz</a>
+        <a href="http://www.apache.org/dist/ws/axis2/c/1_5_0/axis2c-bin-1.5.0-linux.tar.gz.md5" class="externalLink" title="http://www.apache.org/dist/ws/axis2/c/1_5_0/axis2c-bin-1.5.0-linux.tar.gz.md5">MD5</a>
+        <a href="http://www.apache.org/dist/ws/axis2/c/1_5_0/axis2c-bin-1.5.0-linux.tar.gz.asc" class="externalLink" title="http://www.apache.org/dist/ws/axis2/c/1_5_0/axis2c-bin-1.5.0-linux.tar.gz.asc">PGP</a>
+        <br></br>
+        - Source Distribution <a href="[preferred]/ws/axis2/c/1_5_0/axis2c-src-1.5.0.tar.gz" title="[preferred]/ws/axis2/c/1_5_0/axis2c-src-1.5.0.tar.gz" onclick="javascript:urchinTracker (&apos;/downloads/axis2c-src-1.5.0.tar.gz&apos;);">tar.gz</a>
+        <a href="http://www.apache.org/dist/ws/axis2/c/1_5_0/axis2c-src-1.5.0.tar.gz.md5" class="externalLink" title="http://www.apache.org/dist/ws/axis2/c/1_5_0/axis2c-src-1.5.0.tar.gz.md5">MD5</a>
+        <a href="http://www.apache.org/dist/ws/axis2/c/1_5_0/axis2c-src-1.5.0.tar.gz.asc"
+           class="externalLink"  title="http://www.apache.org/dist/ws/axis2/c/1_5_0/axis2c-src-1.5.0.tar.gz.asc">PGP</a>
+            </td>
+            <td>06-05-2008</td>
+            <td>1.5.0 Release (Mirrored)</td>
+          </tr>
 <!--##############################1.4.0 Release#############################-->
           <tr class="b">
             <td align="center" valign="middle">1.4.0</td>
