@@ -22,9 +22,9 @@
       <h3>Latest Release</h3>
     </div>
     <div class="subsection">
-      <a name="17_January_2008_-_Apache_Axis2_C_Version_1_2_0_Released"></a>
-      <h3>6th May 2008 - Apache Axis2/C Version 1.4.0 Released</h3>
-      <p><a href="http://ws.apache.org/axis2/c/download.cgi" class="externalLink" title="External Link">Download 1.4.0</a></p>
+      <a name="17_January_2008_-_Apache_Axis2_C_Version_1_5_0_Released"></a>
+      <h3>6th May 2008 - Apache Axis2/C Version 1.5.0 Released</h3>
+      <p><a href="http://ws.apache.org/axis2/c/download.cgi" class="externalLink" title="External Link">Download 1.5.0</a></p>
     </div>
     <div class="subsection">
       <a name="Key_Features"></a>
